src/styles/buttons.scss
/* --------------------------------- BUTTONS -------------------------------- */
.btn {
  @apply align-middle;
  @apply box-border;
  @apply flex-grow-0;
  @apply flex-shrink-0;
  @apply inline-flex;
  @apply items-center;
  @apply justify-center;
  @apply relative;
  @apply rounded-md;
  @apply select-none;
  @apply uppercase;
  @apply whitespace-nowrap;
  flex: 0 0 auto;
  font-weight: 500;
  height: 36px;
  min-width: 64px;
  padding: 0 16px;
  text-decoration: none;
  transition: background-color 0.3s linear;
  background-color: #42373711;

  &.icon-only {
    min-width: 50px;
  }

  & .loading-icon {
    stroke: #fff;
  }

  &.btn-primary {
    @apply text-white;
    @apply bg-blue-600;
    &:hover {
      @apply bg-blue-700;
    }
    & .loading-icon {
      padding: 5px;
      width: 100%;
      max-width: 40px;
      height: 100%;
    }
  }

  &.btn-error {
    @apply text-white;
    @apply bg-red-600;
    &:hover {
      @apply bg-red-700;
    }
  }

  &.btn-state-loading {
    cursor: not-allowed;
    padding: 0;
    pointer-events: none;
  }

  &.loading-icon {
    stroke: #7616cf;
  }
}

*:disabled,
.disabled {
  pointer-events: visiblePainted;
  cursor: not-allowed;
}

.btn:disabled,
.disabled {
  background-color: rgba(0, 0, 0, 0.12) !important;
  color: rgba(0, 0, 0, 0.26) !important;
}

// .btn:not(:disabled):active {
//   transform: scale(1.05);
//   box-sizing: border-box;
// }

